Added travis file.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/heltonalves/.pyenv/versions/3.7.2/envs/gerenciador_tarefas/bin/python"
+    "python.pythonPath": "/Users/heltonalves/.pyenv/versions/3.7.2/envs/gerenciador_tarefas/bin/python",
+    "workbench.colorCustomizations": {}
 }
