--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "/Users/heltonalves/.pyenv/versions/3.7.2/envs/gerenciador_tarefas/bin/python",
-    "workbench.colorCustomizations": {}
+    "workbench.colorCustomizations": {},
+    "python.linting.enabled": true
 }
